# ds-rpc-01

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: exception.py  frontend.py  llm.py  llm_config.py  main.py  speech_service.py  users.py  workflow.py
app/Storage/: Hybrid_ret.py  keyword_ret.py  vectors.py
app/dataloader/: Database.py  __init__.py  dataload.py  splitter.py
app/graph/: edges.py  graph.py  model.py  nodes.py  state.py
app/graph/utils/: prompt.py
app/memory/: longterm_memory.py
hr_db/: chroma.sqlite3
notebook/: research1.ipynb
retrievers/: eng_keyword.pkl  fin_quarterly_keyword.pkl  fin_summary_keyword.pkl  general_keyword.pkl  hr_keyword.pkl  marketing_keyword.pkl
